[project]
name = "yamlsmith"
version = "0.1.0"
description = "Round-trip YAML 1.2 library with comment preservation — a modern ruamel.yaml replacement"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Agentine" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/agentine/yamlsmith"
Repository = "https://github.com/agentine/yamlsmith"
"Issue Tracker" = "https://github.com/agentine/yamlsmith/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yamlsmith"]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
